Polish implementation and Javadoc for file/directory publication