@@ -18,7 +18,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Stream;
 
@@ -67,7 +66,7 @@ public interface TestReporter {
 	 * @see #publishEntry(String)
 	 */
 	default void publishEntry(String key, String value) {
-		this.publishEntry(Collections.singletonMap(key, value));
+		publishEntry(Map.of(key, value));
 	}
 
 	/**
@@ -84,7 +83,7 @@ public interface TestReporter {
 	 */
 	@API(status = STABLE, since = "5.3")
 	default void publishEntry(String value) {
-		this.publishEntry("value", value);
+		publishEntry("value", value);
 	}
 
 	/**
@@ -93,7 +92,7 @@ public interface TestReporter {
 	 * <p>The file will be copied to the report output directory replacing any
 	 * potentially existing file with the same name.
 	 *
-	 * @param file the file to be attached; never {@code null} or blank
+	 * @param file the file to be published; never {@code null} or blank
 	 * @param mediaType the media type of the file; never {@code null}; use
 	 * {@link MediaType#APPLICATION_OCTET_STREAM} if unknown
 	 * @since 5.12
@@ -112,13 +111,13 @@ public interface TestReporter {
 	 * <p>The entire directory will be copied to the report output directory
 	 * replacing any potentially existing files with the same name.
 	 *
-	 * @param directory the file to be attached; never {@code null} or blank
+	 * @param directory the directory to be published; never {@code null} or blank
 	 * @since 5.12
 	 */
 	@API(status = MAINTAINED, since = "5.13.3")
 	default void publishDirectory(Path directory) {
 		Preconditions.condition(Files.exists(directory), () -> "directory must exist: " + directory);
-		Preconditions.condition(Files.isDirectory(directory), () -> "directory must be a directory: " + directory);
+		Preconditions.condition(Files.isDirectory(directory), () -> "path must represent a directory: " + directory);
 		publishDirectory(directory.getFileName().toString(), path -> {
 			try (Stream<Path> stream = Files.walk(directory)) {
 				stream.forEach(source -> {
@@ -140,13 +139,13 @@ public interface TestReporter {
 	}
 
 	/**
-	 * Publish a file or directory with the supplied name and media type written
-	 * by the supplied action and attach it to the current test or container.
+	 * Publish a file with the supplied name and media type written by the supplied
+	 * action and attach it to the current test or container.
 	 *
 	 * <p>The {@link Path} passed to the supplied action will be relative to the
-	 * report output directory, but it's up to the action to write the file.
+	 * report output directory, but it is up to the action to write the file.
 	 *
-	 * @param name the name of the file to be attached; never {@code null} or
+	 * @param name the name of the file to be published; never {@code null} or
 	 * blank and must not contain any path separators
 	 * @param mediaType the media type of the file; never {@code null}; use
 	 * {@link MediaType#APPLICATION_OCTET_STREAM} if unknown
@@ -163,12 +162,13 @@ public interface TestReporter {
 	 * and attach it to the current test or container.
 	 *
 	 * <p>The {@link Path} passed to the supplied action will be relative to the
-	 * report output directory and point to an existing directory, but it's up
-	 * to the action to write files to it.
+	 * report output directory and will point to an existing directory, but it is
+	 * up to the action to write files to the directory.
 	 *
-	 * @param name the name of the directory to be attached; never {@code null}
+	 * @param name the name of the directory to be published; never {@code null}
 	 * or blank and must not contain any path separators
-	 * @param action the action to be executed to write the file; never {@code null}
+	 * @param action the action to be executed to write to the directory; never
+	 * {@code null}
 	 * @since 5.12
 	 */
 	@API(status = MAINTAINED, since = "5.13.3")
